--- a/nederlands/index.html
+++ b/nederlands/index.html
@@ -41,7 +41,7 @@
     <a href="#accueil"><img src="../logo.webp" alt="Logo" class="logo-overlap" /></a>
   </div>
 <div class="lang-switch" aria-label="Taalkeuze">
-<a href="../index.html">FR</a> | <a href="../english/index.html">EN</a> | <a href="index.html">NL</a> | <a href="../greek/index.html">GR</a>
+<a href="../fr/index.html">FR</a> | <a href="../english/index.html">EN</a> | <a href="index.html">NL</a> | <a href="../greek/index.html">GR</a>
 </div>
 </nav>
 
@@ -146,7 +146,7 @@
   <div class="footer-inner">
     <p>© 2025 ACCOUNT-BEL<span class="belgian-flag-img"></span>. ALLE RECHTEN VOORBEHOUDEN.</p>
     <div class="footer-langs">
-      <a href="../index.html">FR</a> | <a href="../english/index.html">EN</a> | <a href="index.html">NL</a> | <a href="../greek/index.html">GR</a>
+      <a href="../fr/index.html">FR</a> | <a href="../english/index.html">EN</a> | <a href="index.html">NL</a> | <a href="../greek/index.html">GR</a>
       <a href="mentions.html">Wettelijke vermeldingen</a>
     </div>
     <div class="legal-footer">
