--- a/english/index.html
+++ b/english/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Accounting Expertise in Brussels | Account-Bel</title>
   <link rel="stylesheet" href="../style.css"/>
-<link rel="preload" href="../home.webp" as="image" type="image/webp" fetchpriority="high">
+  <link rel="preload" href="../home.webp" as="image" type="image/webp" fetchpriority="high">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet"/>
 </head>
 <body>
@@ -23,7 +23,7 @@
     <a href="#home"><img src="../logo.webp" alt="Logo" class="logo-overlap" /></a>
   </div>
 <div class="lang-switch" aria-label="Language selection">
-<a href="../index.html">FR</a> | <a href="index.html">EN</a> | <a href="../nederlands/index.html">NL</a> | <a href="../greek/index.html">GR</a>
+  <a href="../fr/index.html">FR</a> | <a href="index.html">EN</a> | <a href="../nederlands/index.html">NL</a> | <a href="../greek/index.html">GR</a>
 </div>
 </nav>
 
@@ -34,8 +34,7 @@
   <div class="hero-overlay"></div>
   <div class="hero-text">
     <h1>ACCOUNTING EXPERTISE, REINVENTED WITH PRECISION</h1>
-    <a href="#contact"><button class="cta-button">Contact us
-</button></a>
+    <a href="#contact"><button class="cta-button">Contact us</button></a>
   </div>
 </section>
 
@@ -54,6 +53,7 @@
     <div class="about-photo-overlay">Michael Administrator</div>
   </div>
 </section>
+
 <!-- SERVICES -->
 <section class="services-section" id="services">
   <h2 class="services-title">OUR SERVICES</h2>
@@ -78,7 +78,7 @@
       <div class="blog-content">
         <h2>E-invoicing in Belgium</h2>
         <p class="blog-date">June 26, 2025</p>
-        <p> Deadline January 1, 2026 — E-invoicing will become mandatory in Belgium. It is crucial to prepare now to avoid last-minute constraints and streamline your administration.</p>
+        <p>Deadline January 1, 2026 — E-invoicing will become mandatory in Belgium. It is crucial to prepare now to avoid last-minute constraints and streamline your administration.</p>
         <p>Our firm is ready to support you through this transition.</p>
         <p><a href="#contact" class="read-more">Contact us for guidance or compliance assistance</a>.</p>
       </div>
@@ -129,7 +129,7 @@
   <div class="footer-inner">
     <p>© 2025 ACCOUNT-BEL<span class="belgian-flag-img"></span>. ALL RIGHTS RESERVED.</p>
     <div class="footer-langs">
-      <a href="../index.html">FR</a> | <a href="index.html">EN</a> | <a href="../nederlands/index.html">NL</a> | <a href="../greek/index.html">GR</a>
+      <a href="../fr/index.html">FR</a> | <a href="index.html">EN</a> | <a href="../nederlands/index.html">NL</a> | <a href="../greek/index.html">GR</a>
       <a href="mentions.html">Legal Notice</a>
     </div>
     <div class="legal-footer">
