--- a/greek/index.html
+++ b/greek/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Λογιστική Εξειδίκευση στις Βρυξέλλες | Account-Bel</title>
   <link rel="stylesheet" href="../style.css"/>
-<link rel="preload" href="../home.webp" as="image" type="image/webp" fetchpriority="high">
+  <link rel="preload" href="../home.webp" as="image" type="image/webp" fetchpriority="high">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet"/>
 </head>
 <body>
@@ -23,7 +23,7 @@
     <a href="#accueil"><img src="../logo.webp" alt="Λογότυπο" class="logo-overlap" /></a>
   </div>
 <div class="lang-switch" aria-label="Επιλογή γλώσσας">
- <a href="../index.html">FR</a> | <a href="../english/index.html">EN</a> | <a href="../nederlands/index.html">NL</a> | <a href="index.html">GR</a>
+ <a href="../fr/index.html">FR</a> | <a href="../english/index.html">EN</a> | <a href="../nederlands/index.html">NL</a> | <a href="index.html">GR</a>
 </div>
 </nav>
 
@@ -128,7 +128,7 @@
   <div class="footer-inner">
     <p>© 2025 ACCOUNT-BEL<span class="belgian-flag-img"></span>. ΟΛΑ ΤΑ ΔΙΚΑΙΩΜΑΤΑ ΚΑΤΟΧΥΡΩΜΕΝΑ.</p>
     <div class="footer-langs">
-      <a href="../index.html">FR</a> | <a href="../english/index.html">EN</a> | <a href="../nederlands/index.html">NL</a> | <a href="index.html">GR</a>
+      <a href="../fr/index.html">FR</a> | <a href="../english/index.html">EN</a> | <a href="../nederlands/index.html">NL</a> | <a href="index.html">GR</a>
       <a href="mentions.html">Νομικές πληροφορίες</a>
     </div>
     <div class="legal-footer">
