--- a/english/mentions.html
+++ b/english/mentions.html
@@ -85,5 +85,6 @@
     <h2>Cookies</h2>
     <p>This site uses only technical cookies essential for proper functionality. No personal data is collected for advertising or tracking purposes without your explicit consent.</p>
   </div>
+  <script src="../nocache.js"></script>
 </body>
 </html>
