--- a/fr/index.html
+++ b/fr/index.html
@@ -199,5 +199,6 @@ document.addEventListener("DOMContentLoaded", function () {
   });
 });
 </script>
+  <script src="../nocache.js"></script>
 </body>
 </html>
