--- a/greek/mentions.html
+++ b/greek/mentions.html
@@ -66,5 +66,6 @@
     <h2>Cookies</h2>
     <p>Αυτός ο ιστότοπος χρησιμοποιεί μόνο τεχνικά cookies που είναι απαραίτητα για τη σωστή του λειτουργία. Δεν συλλέγονται προσωπικά δεδομένα για διαφημιστικούς ή παρακολουθητικούς σκοπούς χωρίς τη ρητή συγκατάθεσή σας.</p>
   </div>
+    <script src="../nocache.js"></script>
 </body>
 </html>
