--- a/nederlands/mentions.html
+++ b/nederlands/mentions.html
@@ -84,5 +84,6 @@
     <h2>Cookies</h2>
     <p>Deze website maakt uitsluitend gebruik van technische cookies die noodzakelijk zijn voor een goede werking. Er worden geen persoonlijke gegevens verzameld voor reclame- of traceerdoeleinden zonder uw uitdrukkelijke toestemming.</p>
   </div>
+    <script src="../nocache.js"></script>
 </body>
 </html>
