--- a/index.html
+++ b/index.html
@@ -185,5 +185,6 @@ document.addEventListener("DOMContentLoaded", function () {
     });
 });
 </script>
+  <script src="nocache.js"></script>
 </body>
 </html>
