--- a/mentions.html
+++ b/mentions.html
@@ -87,5 +87,6 @@
     <h2>Cookies</h2>
     <p>Ce site utilise uniquement des cookies techniques nécessaires à son bon fonctionnement. Aucune donnée personnelle n’est collectée à des fins publicitaires ou de traçage sans votre consentement explicite.</p>
   </div>
+  <script src="nocache.js"></script>
 </body>
 </html>
