--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
+ <head>
   <meta charset="utf-8"/>
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Boekhoudkundige expertise in Brussel | Account-Bel</title>
 <meta name="description" content="Account-Bel, erkend boekhoudkantoor in Brussel. Boekhouding, fiscaliteit, oprichting van ondernemingen en advies op maat." />
