--- a/english/index.html
+++ b/english/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Accounting Expertise in Brussels | Account-Bel</title>
-  <link rel="stylesheet" href="../style.css"/>
+  <script src="../nocache.js"></script>
   <link rel="preload" href="../home.webp" as="image" type="image/webp" fetchpriority="high">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet"/>
 </head>
