--- a/english/mentions.html
+++ b/english/mentions.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Legal Notice - Account-Bel | Chartered Accounting Firm in Brussels</title>
   <meta name="description" content="Legal notice of the Account-Bel website. Transparency, GDPR compliance, Netlify hosting." />
@@ -23,7 +26,7 @@
   <meta name="twitter:description" content="All legal information from our Brussels-based chartered accounting firm." />
   <meta name="twitter:image" content="https://account-bel.be/images/og-image.jpg" />
 
-  <link rel="stylesheet" href="../style.css" />
+ <link rel="stylesheet" href="../style.css?v=2025-08-19-2">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet" />
   <style>
     body {
