--- a/english/index.html
+++ b/english/index.html
@@ -7,7 +7,7 @@
 <meta http-equiv="Expires" content="0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Accounting Expertise in Brussels | Account-Bel</title>
-  <script src="../nocache.js"></script>
+  <link rel="stylesheet" href="../style.css?v=2025-08-19-2">
   <link rel="preload" href="../home.webp" as="image" type="image/webp" fetchpriority="high">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet"/>
 </head>
