--- a/fr/index.html
+++ b/fr/index.html
@@ -2,6 +2,9 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8"/>
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Expertise Comptable à Bruxelles | Account-Bel</title>
   <meta name="description" content="Cabinet d'experts-comptables à Bruxelles. Fiscalité, paie, audit, conseils. Service haut de gamme et personnalisé." />
@@ -27,7 +30,7 @@
   <meta name="twitter:image" content="https://account-bel.be/images/og-image.jpg" />
 
   <!-- Feuilles de style -->
-  <link href="/style.css" rel="stylesheet"/>
+ <link rel="stylesheet" href="../style.css?v=2025-08-19-2">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&amp;display=swap" rel="stylesheet"/>
