--- a/nederlands/index.html
+++ b/nederlands/index.html
@@ -2,6 +2,9 @@
 <html lang="nl">
 <head>
   <meta charset="utf-8"/>
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Boekhoudkundige expertise in Brussel | Account-Bel</title>
   <meta name="description" content="Account-Bel, erkend boekhoudkantoor in Brussel. Boekhouding, fiscaliteit, oprichting van ondernemingen en advies op maat." />
@@ -23,7 +26,7 @@
   <meta name="twitter:description" content="Uw cijfers, onze zorg. Persoonlijke boekhoudkundige begeleiding in Brussel." />
   <meta name="twitter:image" content="https://account-bel.be/images/og-image.jpg" />
 
-  <link rel="stylesheet" href="../style.css"/>
+  <link rel="stylesheet" href="../style.css?v=2025-08-19-2">
   <link rel="preload" href="../home.webp" as="image" type="image/webp" fetchpriority="high">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet"/>
 </head>
