--- a/nederlands/mentions.html
+++ b/nederlands/mentions.html
@@ -2,6 +2,9 @@
 <html lang="nl">
 <head>
   <meta charset="UTF-8" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Wettelijke Vermeldingen - Account-Bel</title>
 <meta name="description" content="Wettelijke vermeldingen van de website van Account-Bel. Transparantie, AVG-naleving, Netlify-hosting." />
@@ -22,7 +25,7 @@
 <meta name="twitter:title" content="Wettelijke Vermeldingen - Account-Bel" />
 <meta name="twitter:description" content="Alle juridische informatie van ons erkend boekhoudkantoor in Brussel." />
 <meta name="twitter:image" content="https://account-bel.be/images/og-image.jpg" />
-  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="../style.css?v=2025-08-19-2">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet" />
   <style>
     body {
