--- a/nederlands/index.html
+++ b/nederlands/index.html
@@ -6,6 +6,16 @@
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17377754743">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17377754743');
+</script>
   <title>Boekhoudkundige expertise in Brussel | Account-Bel</title>
   <meta name="description" content="Account-Bel, erkend boekhoudkantoor in Brussel. Boekhouding, fiscaliteit, oprichting van ondernemingen en advies op maat." />
   <meta name="keywords" content="boekhouding, fiscaliteit, Brussel, Account-Bel, boekhoudkantoor, btw, jaarrekening" />
@@ -163,6 +173,14 @@
     </div>
   </div>
 </footer>
+  <!-- Event snippet for Envoi de formulaire pour prospects conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17377754743/gK1PCOiF5IMbEPf8rd5A',
+      'value': 1.0,
+      'currency': 'EUR'
+  });
+</script>
   <script src="../nocache.js"></script>
 </body>
 </html>
