--- a/greek/index.html
+++ b/greek/index.html
@@ -6,6 +6,16 @@
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17377754743">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17377754743');
+</script>
 <title>Λογιστική Εξειδίκευση στις Βρυξέλλες | Account-Bel</title>
   <link rel="stylesheet" href="../style.css?v=2025-08-19-2">
   <link rel="preload" href="../home.webp" as="image" type="image/webp" fetchpriority="high">
@@ -194,6 +204,14 @@
     if (!accepted) {
       document.getElementById('cookieBanner').style.display = 'block';
     }
+  });
+</script>
+  <!-- Event snippet for Envoi de formulaire pour prospects conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17377754743/gK1PCOiF5IMbEPf8rd5A',
+      'value': 1.0,
+      'currency': 'EUR'
   });
 </script>
   <script src="../nocache.js"></script>
