--- a/fr/index.html
+++ b/fr/index.html
@@ -6,6 +6,16 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17377754743">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17377754743');
+</script>
   <title>Expertise Comptable à Bruxelles | Account-Bel</title>
   <meta name="description" content="Cabinet d'experts-comptables à Bruxelles. Fiscalité, paie, audit, conseils. Service haut de gamme et personnalisé." />
   <meta name="keywords" content="expert comptable, comptabilité Bruxelles, fiscalité, entreprise, gestion paie, audit, Account-Bel">
@@ -201,6 +211,14 @@ document.addEventListener("DOMContentLoaded", function () {
     }
   });
 });
+</script>
+  <!-- Event snippet for Envoi de formulaire pour prospects conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17377754743/gK1PCOiF5IMbEPf8rd5A',
+      'value': 1.0,
+      'currency': 'EUR'
+  });
 </script>
   <script src="../nocache.js"></script>
 </body>
