--- a/index.html
+++ b/index.html
@@ -69,8 +69,13 @@
   <div class="hero-overlay"></div>
   <div class="hero-text">
     <h1>BOEKHOUDKUNDIGE EXPERTISE, HERUITGEVONDEN MET EISEN</h1>
-    <a href="#contact"><button class="cta-button">Neem contact met ons op</button></a>
-  </div>
+    <!-- Bouton carré -->
+    <div class="cta-center">
+      <a href="#contact" class="square-cta">
+        <span>Neem contact met ons op</span>
+      </a>
+    </div>
+  </div> 
 </section>
 
 <!-- OVER ONS -->
