--- a/fr/index.html
+++ b/fr/index.html
@@ -78,9 +78,14 @@
   <div class="hero-overlay"></div>
   <div class="hero-text">
     <h1>L’EXPERTISE COMPTABLE, RÉINVENTÉE AVEC EXIGENCE</h1>
-    <a href="#contact" class="cta-button" aria-label="Nous contacter">Contactez-nous</a>
-  </div>
+    <div class="cta-center">
+      <a href="#contact" class="square-cta">
+        <span>CONTACTEZ-NOUS</span>
+      </a>
+    </div>
+  </div> 
 </section>
+
 
 <!-- À PROPOS -->
 <section class="about" id="about">
