--- a/english/index.html
+++ b/english/index.html
@@ -47,7 +47,11 @@
   <div class="hero-overlay"></div>
   <div class="hero-text">
     <h1>ACCOUNTING EXPERTISE, REINVENTED WITH PRECISION</h1>
-    <a href="#contact"><button class="cta-button">Contact us</button></a>
+    <div class="cta-center">
+  <a href="#contact" class="square-cta">
+    <span>CONTACT US</span>
+  </a>
+</div>
   </div>
 </section>
 
