--- a/greek/index.html
+++ b/greek/index.html
@@ -47,7 +47,11 @@
   <div class="hero-overlay"></div>
   <div class="hero-text">
     <h1>Η ΛΟΓΙΣΤΙΚΗ ΕΞΕΙΔΙΚΕΥΣΗ, ΕΠΑΝΑΣΧΕΔΙΑΣΜΕΝΗ ΜΕ ΑΠΑΙΤΗΣΗ</h1>
-    <a href="#contact"><button class="cta-button">Επικοινωνήστε μαζί μας</button></a>
+    <div class="cta-center">
+  <a href="#contact" class="square-cta">
+    <span>ΕΠΙΚΟΙΝΩΝΗΣΤΕ ΜΑΖΙ ΜΑΣ</span>
+  </a>
+</div>
   </div>
 </section>
 
