--- a/english/index.html
+++ b/english/index.html
@@ -17,7 +17,7 @@
   gtag('config', 'AW-17377754743');
 </script>
 <title>Accounting Expertise in Brussels | Account-Bel</title>
-  <link rel="stylesheet" href="../style.css?v=2025-08-19-2">
+  <link rel="stylesheet" href="../style.css?v=3">
   <link rel="preload" href="../home.webp" as="image" type="image/webp" fetchpriority="high">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet"/>
 </head>
