--- a/english/mentions.html
+++ b/english/mentions.html
@@ -26,7 +26,7 @@
   <meta name="twitter:description" content="All legal information from our Brussels-based chartered accounting firm." />
   <meta name="twitter:image" content="https://account-bel.be/images/og-image.jpg" />
 
- <link rel="stylesheet" href="../style.css?v=2025-08-19-2">
+ <link rel="stylesheet" href="../style.css?v=3">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet" />
   <style>
     body {
