--- a/fr/index.html
+++ b/fr/index.html
@@ -40,7 +40,7 @@
   <meta name="twitter:image" content="https://account-bel.be/images/og-image.jpg" />
 
   <!-- Feuilles de style -->
- <link rel="stylesheet" href="../style.css?v=2025-08-19-2">
+ <link rel="stylesheet" href="../style.css?v=3">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&amp;display=swap" rel="stylesheet"/>
