--- a/nederlands/mentions.html
+++ b/nederlands/mentions.html
@@ -25,7 +25,7 @@
 <meta name="twitter:title" content="Wettelijke Vermeldingen - Account-Bel" />
 <meta name="twitter:description" content="Alle juridische informatie van ons erkend boekhoudkantoor in Brussel." />
 <meta name="twitter:image" content="https://account-bel.be/images/og-image.jpg" />
-  <link rel="stylesheet" href="../style.css?v=2025-08-19-2">
+  <link rel="stylesheet" href="../style.css?v=3">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet" />
   <style>
     body {
