--- a/fr/index.html
+++ b/fr/index.html
@@ -40,7 +40,7 @@
   <meta name="twitter:image" content="https://account-bel.be/images/og-image.jpg" />
 
   <!-- Feuilles de style -->
- <link rel="stylesheet" href="../style.css?v=3">
+ <link rel="stylesheet" href="../style.css?v=4">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&amp;display=swap" rel="stylesheet"/>
@@ -79,12 +79,11 @@
   <div class="hero-text">
     <h1>L’EXPERTISE COMPTABLE, RÉINVENTÉE AVEC EXIGENCE</h1>
     <div class="cta-center">
-      <a href="#contact" class="square-cta">
-        <span>CONTACTEZ-NOUS</span>
-      </a>
+      <a href="#contact" class="rect-cta">CONTACTEZ-NOUS</a>
     </div>
-  </div> 
+  </div>
 </section>
+
 
 
 <!-- À PROPOS -->
