--- a/english/index.html
+++ b/english/index.html
@@ -17,7 +17,7 @@
   gtag('config', 'AW-17377754743');
 </script>
 <title>Accounting Expertise in Brussels | Account-Bel</title>
-  <link rel="stylesheet" href="../style.css?v=3">
+  <link rel="stylesheet" href="../style.css?v=4">
   <link rel="preload" href="../home.webp" as="image" type="image/webp" fetchpriority="high">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet"/>
 </head>
@@ -48,10 +48,8 @@
   <div class="hero-text">
     <h1>ACCOUNTING EXPERTISE, REINVENTED WITH PRECISION</h1>
     <div class="cta-center">
-  <a href="#contact" class="square-cta">
-    <span>CONTACT US</span>
-  </a>
-</div>
+      <a href="#contact" class="rect-cta">CONTACT US</a>
+    </div>
   </div>
 </section>
 
