--- a/greek/index.html
+++ b/greek/index.html
@@ -17,7 +17,7 @@
   gtag('config', 'AW-17377754743');
 </script>
 <title>Λογιστική Εξειδίκευση στις Βρυξέλλες | Account-Bel</title>
-  <link rel="stylesheet" href="../style.css?v=3">
+  <link rel="stylesheet" href="../style.css?v=4">
   <link rel="preload" href="../home.webp" as="image" type="image/webp" fetchpriority="high">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet"/>
 </head>
@@ -48,12 +48,11 @@
   <div class="hero-text">
     <h1>Η ΛΟΓΙΣΤΙΚΗ ΕΞΕΙΔΙΚΕΥΣΗ, ΕΠΑΝΑΣΧΕΔΙΑΣΜΕΝΗ ΜΕ ΑΠΑΙΤΗΣΗ</h1>
     <div class="cta-center">
-  <a href="#contact" class="square-cta">
-    <span>ΕΠΙΚΟΙΝΩΝΗΣΤΕ ΜΑΖΙ ΜΑΣ</span>
-  </a>
-</div>
+      <a href="#contact" class="rect-cta">ΕΠΙΚΟΙΝΩΝΗΣΤΕ ΜΑΖΙ ΜΑΣ</a>
+    </div>
   </div>
 </section>
+
 
 <!-- ABOUT -->
 <section class="about" id="about">
