--- a/nederlands/index.html
+++ b/nederlands/index.html
@@ -36,7 +36,7 @@
   <meta name="twitter:description" content="Uw cijfers, onze zorg. Persoonlijke boekhoudkundige begeleiding in Brussel." />
   <meta name="twitter:image" content="https://account-bel.be/images/og-image.jpg" />
 
-  <link rel="stylesheet" href="../style.css?v=3">
+  <link rel="stylesheet" href="../style.css?v=4">
   <link rel="preload" href="../home.webp" as="image" type="image/webp" fetchpriority="high">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet"/>
 </head>
@@ -68,12 +68,11 @@
   <div class="hero-text">
     <h1>BOEKHOUDKUNDIGE EXPERTISE, HERUITGEVONDEN MET EISEN</h1>
     <div class="cta-center">
-  <a href="#contact" class="square-cta">
-    <span>Neem contact met ons op</span>
-  </a>
-</div>
+      <a href="#contact" class="rect-cta">Neem contact met ons op</a>
+    </div>
   </div>
 </section>
+
 
 <!-- OVER ONS -->
 <section class="about" id="about">
