--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <meta name="twitter:title" content="Boekhoudkundige expertise in Brussel | Account-Bel" />
 <meta name="twitter:description" content="Uw cijfers, onze zorg. Persoonlijke boekhoudkundige begeleiding in Brussel." />
 <meta name="twitter:image" content="https://account-bel.be/images/og-image.jpg" />
-  <link rel="stylesheet" href="../style.css?v=3"/>
+  <link rel="stylesheet" href="../style.css?v=4"/>
 <link rel="preload" href="../home.webp" as="image" type="image/webp" fetchpriority="high">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet"/>
 </head>
@@ -69,14 +69,12 @@
   <div class="hero-overlay"></div>
   <div class="hero-text">
     <h1>BOEKHOUDKUNDIGE EXPERTISE, HERUITGEVONDEN MET EISEN</h1>
-    <!-- Bouton carré -->
     <div class="cta-center">
-      <a href="#contact" class="square-cta">
-        <span>Neem contact met ons op</span>
-      </a>
+      <a href="#contact" class="rect-cta">Neem contact met ons op</a>
     </div>
-  </div> 
+  </div>
 </section>
+
 
 <!-- OVER ONS -->
 <section class="about" id="about">
