--- a/index.html
+++ b/index.html
@@ -72,12 +72,21 @@
 <body>
 <!-- NAVBAR -->
 <nav class="navbar">
-   <!-- Switcher langues — MOBILE ONLY (à gauche) -->
-<div class="lang-switch-mobile" role="navigation" aria-label="Taalkeuze / Language">
-  <a href="/"            lang="fr" hreflang="fr" data-lang="fr">FR</a>
-  <a href="/english/"    lang="en" hreflang="en" data-lang="en">EN</a>
-  <a href="/nederlands/" lang="nl" hreflang="nl" data-lang="nl">NL</a>
-  <a href="/greek/"      lang="el" hreflang="el" data-lang="el">GR</a>
+ <!-- ✅ Langues (mobile) : bouton + menu déroulant, aligné à gauche -->
+<div class="lang-dd" data-current="fr">
+  <button class="lang-dd__btn" aria-haspopup="listbox" aria-expanded="false" aria-label="Choisir la langue">
+    <span class="lang-dd__label">FR</span>
+    <svg class="lang-dd__chev" viewBox="0 0 24 24" width="18" height="18" aria-hidden="true">
+      <path d="M7 10l5 5 5-5" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+    </svg>
+  </button>
+
+  <ul class="lang-dd__menu" role="listbox">
+    <li><a href="/"            lang="fr" hreflang="fr" data-lang="fr" role="option">FR</a></li>
+    <li><a href="/english/"    lang="en" hreflang="en" data-lang="en" role="option">EN</a></li>
+    <li><a href="/nederlands/" lang="nl" hreflang="nl" data-lang="nl" role="option">NL</a></li>
+    <li><a href="/greek/"      lang="el" hreflang="el" data-lang="el" role="option">GR</a></li>
+  </ul>
 </div>
   <ul class="nav-left">
     <li><a href="#about">OVER ONS</a></li>
@@ -247,15 +256,51 @@
 
 <script src="nocache.js"></script>
   <script>
-(function () {
+(function(){
+  // Détecte la langue depuis l'URL
   var p = (location.pathname || "").toLowerCase();
-  var current = "nl";
+  var current = "fr";
   if (p.startsWith("/english/")) current = "en";
   else if (p.startsWith("/nederlands/")) current = "nl";
   else if (p.startsWith("/greek/") || p.startsWith("/el/")) current = "el";
 
-  document.querySelectorAll('.lang-switch-mobile a, .lang-switch a').forEach(function(a){
+  // Marque la langue active (desktop & mobile)
+  document.querySelectorAll('.lang-switch a, .lang-dd__menu a').forEach(function(a){
     if (a.dataset.lang === current) a.setAttribute('aria-current','true');
+  });
+
+  // Met l'étiquette du bouton (FR/EN/NL/GR)
+  var label = document.querySelector('.lang-dd__label');
+  if (label) label.textContent = current.toUpperCase();
+
+  // Toggle du menu
+  var dd = document.querySelector('.lang-dd');
+  var btn = document.querySelector('.lang-dd__btn');
+  var menu = document.querySelector('.lang-dd__menu');
+  if (!dd || !btn || !menu) return;
+
+  function closeMenu(){
+    dd.classList.remove('is-open');
+    btn.setAttribute('aria-expanded','false');
+  }
+  function openMenu(){
+    dd.classList.add('is-open');
+    btn.setAttribute('aria-expanded','true');
+  }
+
+  btn.addEventListener('click', function(e){
+    e.preventDefault();
+    dd.classList.contains('is-open') ? closeMenu() : openMenu();
+  });
+
+  // Fermer en cliquant à l'extérieur
+  document.addEventListener('click', function(e){
+    if (!dd.contains(e.target)) closeMenu();
+  });
+
+  // Fermer avec Echap
+  document.addEventListener('keydown', function(e){
+    if (e.key === 'Escape') closeMenu();
   });
 })();
 </script>
