--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
   <!-- Open Graph -->
   <meta property="og:title" content="Boekhoudkundige expertise in Brussel | Account-Bel" />
   <meta property="og:description" content="Boekhouding, fiscale aangiften en oprichting van ondernemingen in Brussel. Deskundige en vertrouwelijke begeleiding." />
-  <meta property="og:image" content="https://account-bel.be/images/og-image.jpg" />
+  <meta property="og:image" content="https://account-bel.be/logo.png" />
+<meta property="og:image:alt" content="Logo Account-Bel" />
   <meta property="og:url" content="https://account-bel.be/nederlands/">
   <meta property="og:type" content="website" />
 
@@ -45,7 +46,9 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Boekhoudkundige expertise in Brussel | Account-Bel" />
   <meta name="twitter:description" content="Uw cijfers, onze zorg. Persoonlijke boekhoudkundige begeleiding in Brussel." />
-  <meta name="twitter:image" content="https://account-bel.be/images/og-image.jpg" />
+  <meta name="twitter:image" content="https://account-bel.be/logo.png" />
+<meta name="twitter:image:alt" content="Logo Account-Bel" />
+
 
   <link rel="stylesheet" href="../style.css?v=8"/>
   <!-- Priorité de la hero actuelle (webp existant) -->
