--- a/greek/index.html
+++ b/greek/index.html
@@ -26,6 +26,21 @@
   gtag('config', 'AW-17377754743');
 </script>
 <title>Λογιστική Εξειδίκευση στις Βρυξέλλες | Account-Bel</title>
+  <!-- APERÇU PARTAGE (Open Graph + Twitter) -->
+<meta property="og:title" content="Λογιστική Εξειδίκευση στις Βρυξέλλες | Account-Bel">
+<meta property="og:description" content="Σύγχρονο και απαιτητικό λογιστικό γραφείο στις Βρυξέλλες. Φορολογία, μισθοδοσία, έλεγχος, συμβουλευτική.">
+<meta property="og:image" content="https://account-bel.be/logo.png">
+<meta property="og:image:alt" content="Λογότυπο Account-Bel">
+<meta property="og:url" content="https://account-bel.be/greek/">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Account-Bel">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Λογιστική Εξειδίκευση στις Βρυξέλλες | Account-Bel">
+<meta name="twitter:description" content="Σύγχρονο και απαιτητικό λογιστικό γραφείο στις Βρυξέλλες. Φορολογία, μισθοδοσία, έλεγχος, συμβουλευτική.">
+<meta name="twitter:image" content="https://account-bel.be/logo.png">
+<meta name="twitter:image:alt" content="Λογότυπο Account-Bel">
+
   <link rel="stylesheet" href="../style.css?v=4">
   <link rel="preload" href="../home.webp" as="image" type="image/webp" fetchpriority="high">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet"/>
