--- a/english/index.html
+++ b/english/index.html
@@ -26,6 +26,23 @@
   gtag('config', 'AW-17377754743');
 </script>
 <title>Accounting Expertise in Brussels | Account-Bel</title>
+  <!-- OPEN GRAPH + TWITTER PREVIEW -->
+<meta property="og:title" content="Accounting Expertise in Brussels | Account-Bel">
+<meta property="og:description" content="Modern and demanding accounting firm in Brussels. Taxation, payroll, audit, consulting.">
+<meta property="og:image" content="https://account-bel.be/logo.png">
+<meta property="og:image:alt" content="Account-Bel Logo">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:url" content="https://account-bel.be/english/">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Account-Bel">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Accounting Expertise in Brussels | Account-Bel">
+<meta name="twitter:description" content="Modern and demanding accounting firm in Brussels. Taxation, payroll, audit, consulting.">
+<meta name="twitter:image" content="https://account-bel.be/logo.png">
+<meta name="twitter:image:alt" content="Account-Bel Logo">
+
   <link rel="stylesheet" href="../style.css?v=4">
   <link rel="preload" href="../home.webp" as="image" type="image/webp" fetchpriority="high">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet"/>
