--- a/nederlands/index.html
+++ b/nederlands/index.html
@@ -35,7 +35,7 @@
   <!-- Open Graph -->
   <meta property="og:title" content="Boekhoudkundige expertise in Brussel | Account-Bel" />
   <meta property="og:description" content="Boekhouding, fiscale aangiften en oprichting van ondernemingen in Brussel. Deskundige en vertrouwelijke begeleiding." />
-  <meta property="og:image" content="https://account-bel.be/images/og-image.jpg" />
+  <meta property="og:image" content="https://account-bel.be/logo.png" />
   <meta property="og:url" content="https://account-bel.be/nederlands/index.html" />
   <meta property="og:type" content="website" />
 
@@ -43,7 +43,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Boekhoudkundige expertise in Brussel | Account-Bel" />
   <meta name="twitter:description" content="Uw cijfers, onze zorg. Persoonlijke boekhoudkundige begeleiding in Brussel." />
-  <meta name="twitter:image" content="https://account-bel.be/images/og-image.jpg" />
+  <meta name="twitter:image" content="https://account-bel.be/logo.png" />
 
   <link rel="stylesheet" href="../style.css?v=4">
   <link rel="preload" href="../home.webp" as="image" type="image/webp" fetchpriority="high">
