--- a/fr/index.html
+++ b/fr/index.html
@@ -38,7 +38,11 @@
   <!-- Open Graph -->
   <meta property="og:title" content="Account-Bel SRL - Cabinet d'expertise comptable à Bruxelles" />
   <meta property="og:description" content="Découvrez nos services en comptabilité, fiscalité et accompagnement d'entreprise. Un cabinet à votre écoute." />
-  <meta property="og:image" content="https://account-bel.be/images/og-image.jpg" />
+<meta property="og:image" content="https://account-bel.be/logo.png" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+<meta property="og:image:alt" content="Logo Account-Bel" />
+
   <meta property="og:url" content="https://account-bel.be/fr/" />
   <meta property="og:type" content="website" />
 
@@ -46,7 +50,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Account-Bel SRL - Expertise Comptable Bruxelles" />
   <meta name="twitter:description" content="Cabinet expert-comptable moderne à Bruxelles. Services fiscaux, gestion sociale, accompagnement personnalisé." />
-  <meta name="twitter:image" content="https://account-bel.be/images/og-image.jpg" />
+<meta name="twitter:image" content="https://account-bel.be/logo.png" />
 
   <!-- Feuilles de style -->
  <link rel="stylesheet" href="../style.css?v=4">
