--- a/nederlands/index.html
+++ b/nederlands/index.html
@@ -36,6 +36,9 @@
   <meta property="og:title" content="Boekhoudkundige expertise in Brussel | Account-Bel" />
   <meta property="og:description" content="Boekhouding, fiscale aangiften en oprichting van ondernemingen in Brussel. Deskundige en vertrouwelijke begeleiding." />
   <meta property="og:image" content="https://account-bel.be/logo.png" />
+  <meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+<meta property="og:image:alt" content="Logo Account-Bel" />
   <meta property="og:url" content="https://account-bel.be/nederlands/index.html" />
   <meta property="og:type" content="website" />
 
