Update image file extensions from .webp to .

--- a/fr/index.html
+++ b/fr/index.html
@@ -33,7 +33,7 @@
   <link rel="canonical" href="https://account-bel.be/fr/" />
 
   <!-- ✅ Préchargement de l'image LCP -->
-  <link rel="preload" href="/home.webp" as="image" type="image/webp" fetchpriority="high">
+  <link rel="preload" href="/home." as="image" type="image/" fetchpriority="high">
 
   <!-- Open Graph -->
   <meta property="og:title" content="Account-Bel SRL - Cabinet d'expertise comptable à Bruxelles" />
@@ -70,7 +70,7 @@
   </ul>
 
   <div class="logo-wrapper">
-    <a href="#accueil"><img src="/logo.webp" alt="Logo" class="logo-overlap" loading="lazy"/></a>
+    <a href="#accueil"><img src="/logo." alt="Logo" class="logo-overlap" loading="lazy"/></a>
   </div>
 
   <!-- Langues -->
@@ -87,7 +87,7 @@
 <main class="scroll-container">
 <!-- ACCUEIL -->
 <section class="hero" id="accueil">
-  <img alt="Accueil" class="hero-image" src="/home.webp" width="1920" height="1080" fetchpriority="high" />
+  <img alt="Accueil" class="hero-image" src="/home." width="1920" height="1080" fetchpriority="high" />
   <div class="hero-overlay"></div>
   <div class="hero-text">
     <h1>L’EXPERTISE COMPTABLE, RÉINVENTÉE AVEC EXIGENCE</h1>
@@ -110,7 +110,7 @@
     <p><strong>Notre mission :</strong> vous faire avancer en toute confiance parce que quand les chiffres sont clairs, l’esprit l’est aussi.</p>
   </div>
   <div class="about-photo-wrapper">
-    <img alt="Michael administrateur" src="/admin.webp" loading="lazy" />
+    <img alt="Michael administrateur" src="/admin." loading="lazy" />
     <div class="about-photo-overlay">Michael administrateur</div>
   </div>
 </section>
@@ -119,14 +119,14 @@
 <section class="services-section" id="services">
   <h2 class="services-title">NOS SERVICES</h2>
   <div class="services-grid">
-    <div class="service-box"><img alt="" src="/comptabilite.webp" loading="lazy" /><h2>Comptabilité Générale</h2><p>Tenue comptable complète, situations et mise à jour régulières.</p></div>
-    <div class="service-box"><img alt="" src="/fiscalite.webp" loading="lazy" /><h2>Déclarations Fiscales</h2><p>Impôts des sociétés, des personnes physiques, déclarations TVA.</p></div>
-    <div class="service-box"><img alt="" src="/creation.webp" loading="lazy" /><h2>Création d’Entreprise</h2><p>Accompagnement depuis le plan financier jusqu'à la signature de l’acte chez le notaire.</p></div>
-    <div class="service-box"><img alt="" src="/social.webp" loading="lazy" /><h2>Gestion Sociale</h2><p>Accès privilégiés avec de grands partenaires sociaux.</p></div>
-    <div class="service-box"><img alt="" src="/conseil.webp" loading="lazy" /><h2>Conseil en Gestion</h2><p>Accompagnement stratégique, tableaux de bord et pilotage.</p></div>
-    <div class="service-box"><img alt="" src="/bilan.webp" loading="lazy" /><h2>Préparation du Bilan</h2><p>Bilan intermédiaire ou annuel, justification des soldes, audit interne.</p></div>
-    <div class="service-box"><img alt="" src="/juridique.webp" loading="lazy" /><h2>Assistance Juridique</h2><p>Rédaction de statuts, assemblées générales, et conseils juridiques.</p></div>
-    <div class="service-box"><img alt="" src="/audit.webp" loading="lazy" /><h2>Audit Premium</h2><p>Vérification approfondie des comptes avec rapport détaillé.</p></div>
+    <div class="service-box"><img alt="" src="/comptabilite." loading="lazy" /><h2>Comptabilité Générale</h2><p>Tenue comptable complète, situations et mise à jour régulières.</p></div>
+    <div class="service-box"><img alt="" src="/fiscalite." loading="lazy" /><h2>Déclarations Fiscales</h2><p>Impôts des sociétés, des personnes physiques, déclarations TVA.</p></div>
+    <div class="service-box"><img alt="" src="/creation." loading="lazy" /><h2>Création d’Entreprise</h2><p>Accompagnement depuis le plan financier jusqu'à la signature de l’acte chez le notaire.</p></div>
+    <div class="service-box"><img alt="" src="/social." loading="lazy" /><h2>Gestion Sociale</h2><p>Accès privilégiés avec de grands partenaires sociaux.</p></div>
+    <div class="service-box"><img alt="" src="/conseil." loading="lazy" /><h2>Conseil en Gestion</h2><p>Accompagnement stratégique, tableaux de bord et pilotage.</p></div>
+    <div class="service-box"><img alt="" src="/bilan." loading="lazy" /><h2>Préparation du Bilan</h2><p>Bilan intermédiaire ou annuel, justification des soldes, audit interne.</p></div>
+    <div class="service-box"><img alt="" src="/juridique." loading="lazy" /><h2>Assistance Juridique</h2><p>Rédaction de statuts, assemblées générales, et conseils juridiques.</p></div>
+    <div class="service-box"><img alt="" src="/audit." loading="lazy" /><h2>Audit Premium</h2><p>Vérification approfondie des comptes avec rapport détaillé.</p></div>
   </div>
 </section>
 
@@ -135,7 +135,7 @@
   <h2 class="blog-title">NOTRE BLOG</h2>
   <div class="blog-container">
     <div class="blog-post">
-      <img alt="Facturation électronique" src="/facturation.webp" loading="lazy" />
+      <img alt="Facturation électronique" src="/facturation." loading="lazy" />
       <div class="blog-content">
         <h2>Facturation électronique en Belgique</h2>
         <p class="blog-date">26 juin 2025</p>
@@ -168,7 +168,7 @@
       </div>
     </div>
     <div class="contact-image">
-      <img alt="Cabinet professionnel" src="/contact.webp" loading="lazy" />
+      <img alt="Cabinet professionnel" src="/contact." loading="lazy" />
     </div>
   </div>
 </section>
@@ -177,10 +177,8 @@
 <section class="gallery-section" id="galerie">
   <h2 class="gallery-title">GALERIE</h2>
   <div class="gallery-grid">
-    <div class="gallery-item"><img alt="Photo 1" src="/galerie1.webp"/></div>
-    <div class="gallery-item"><img alt="Photo 2" src="/galerie2.webp"/></div>
-    <div class="gallery-item"><img alt="Photo 3" src="/galerie3.webp"/></div>
-    <div class="gallery-item"><img alt="Photo 4" src="/galerie4.webp"/></div>
+    <div class="gallery-item"><img alt="Photo 2" src="/galerie2."/></div>
+    <div class="gallery-item"><img alt="Photo 4" src="/galerie4."/></div>
   </div>
 </section>
 </main>
